@@ -49,6 +49,8 @@ unity (7.4.0+16.04.20160906-0ubuntu2) UNRELEASED; urgency=medium
   [ Marco Trevisan (Treviño) ]
   * GnomeSessionManager: add gcancellable to instance and use it for
     calls with temporary proxies
+  * BackgroundSettings: use gnome-bg to generate textures with proper
+    scaling (LP: #1666359)
 
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 04 Jul 2017 18:12:47 +0200
 
